# DetectionOfAnomalies

bones/: CMakeLists.txt
bones/include/: Algorithms.h  Detecting.h  Point.h  Ray.h  Reader.h  Utils.h
bones/src/: Algorithms.cpp  Detecting.cpp  Main.cpp  Reader.cpp  Utils.cpp
bones/tests/: CMakeLists.txt
bones/tests/dcm/: IM000000.dcm
bones/tests/src/: test_algorithms.cpp  test_reader.cpp  test_utils.cpp
